--- a/main.css
+++ b/main.css
@@ -1,25 +1,9 @@
 :root{
     --black: #383b3e;
     --white: #f5f5f5;
-    --Sun: #ffa500;
-    --Mercury: #b5a7a7;
-    --Venus: #eecb8b;
-    --Earth: #40e0d0;
-    --Mars: #ff0000;
-    --Jupiter: #cb4154;
-    --Saturn: #CCCC00;
-    --Uranus: #add8e6;
-    --Neptune: #000080;
-
-    --SunRadius: 150px;
-    --MercuryRadius: 40px;
-    --VenusRadius: 60px;
-    --EarthRadius: 60px;
-    --MarsRadius: 50px;
-    --JupiterRadius: 130px;
-    --SaturnRadius: 120px;
-    --UranusRadius: 110px;
-    --NeptuneRadius: 100px;
+    --pink: #ff00ea;
+    --teal: #00eaff;
+    --lightgreen: #00ff95;
 
 }
 
@@ -40,6 +24,7 @@ MANIFESTO */
 html, body {
     max-width: 100%;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 * {
@@ -70,6 +55,9 @@ html, body {
     display:flex;
     text-align: center;
     justify-content: center;
+
+    position: relative;
+    top: -5px;
 
     font-family: "Ailerons", sans-serif;
     color: var(--black);
@@ -134,11 +122,12 @@ html, body {
 }
 
 #NameText.cheats {
-    background: -webkit-linear-gradient(left, rgb(255, 0, 234), rgb(31, 199, 255));
+    background: -webkit-linear-gradient(left, var(--pink), var(--teal), var(--lightgreen));
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition-duration: 0.5s;
+    filter: drop-shadow(3px 5px red);
 }
 
 #NameText.cheats::before {
@@ -213,6 +202,10 @@ html, body {
     display:none;
 }
 
+#Scroll.cheats {
+    display: none;
+}
+
 @keyframes appear {
     0% {
         opacity: 0;
@@ -223,51 +216,92 @@ html, body {
     }
 }
 
-nav{
-    margin-top: 50vh;
-    width:100%;
-    display:flex;
-    justify-content: black-around;
+nav {
+    height: 40px;
+    width: 100%;
+
+    position: fixed;
+
+    display: flexbox;
+    justify-content: space-evenly;
     align-items: center;
-    font-size: 20px;
-    color:var(--white);
-    border: 1px solid white;
+
+    background-color:var(--white);
+
+    z-index: 3;
+
+    transition: 1s;
 }
 
-nav.hidden {
+nav.changeColor {
+    background-color:var(--black);
+}
+
+nav.touching {
     display: none;
 }
 
 nav ul {
-    width:100%;
-    list-style:none;
-    display:flex;
-    justify-content: black-around;
-    align-items: center;
+    height: 100%;
+
+    display :flex;
+    justify-content: space-evenly;
+    align-content: center;
+
+    font-size: 20px;
 }
 
 nav ul li{
-    display: inline-block;
+    display: flex;
+    align-items: center;
 }
 
 nav ul li a{
+    font-family: "ADAM.CG PRO", serif;
+    transition: 1s;
     transition: all 0.3s ease-in-out 0s;
     text-decoration: none;
+    color:var(--black)
+}
+
+nav ul li a::before {
+    content: '';
+    display: block;
+    position: relative;
+
+    background-color: var(--black);
+    height: 5px;
+    width: 100%;
+    border-radius: 5px;
+
+    transition: transform 0.3s ease;
+    opacity: 1;
+
+    z-index: -1;
+
+    transform: scaleX(0);
+    transform-origin: right;
+}
+
+nav ul li a:hover::before{
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+nav.changeColor ul li a {
     color:var(--white)
 }
 
-nav ul li a:hover{
-    color:red;
+nav.changeColor ul li a::before{
+    background-color: var(--white);
 }
 
-#Sun {
-    width: var(--SunRadius);
-    height: var(--SunRadius);
-    border-radius: 50%;
-    background: var(--Sun);
-    color: var(--white);
-    line-height: var(--SunRadius);
-    text-align: center;
+nav.cheats ul li a {
+    background: -webkit-linear-gradient(right, var(--pink), var(--teal), var(--lightgreen));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition-duration: 0.5s;
 }
 
 body {
@@ -283,7 +317,6 @@ body.changeColor {
     display:flex;
     justify-content: center;
     align-items: center;
-    border: 5px solid red;
 }
 
 .cards {
@@ -294,11 +327,10 @@ body.changeColor {
     width: 90%;
     max-width: 900px;
     flex-wrap: wrap;
-    border: 2px solid yellow;
     z-index: 1;
 }
 
-.cards .card {
+.card {
     position: relative;
     width: 100%;
     height: 600px;
@@ -314,8 +346,8 @@ body.changeColor {
     transition: 0.5s;
 }
 
-.cards .card:hover {
-    background: rgba(255, 0, 0, 1);
+.card:hover {
+    background: rgba(255, 255, 255, 0.1);
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
     border-top: 2px solid rgba(255,255,255,0.2);
     border-left: 2px solid rgba(255,255,255,0.2);
@@ -323,7 +355,7 @@ body.changeColor {
     
 }
 
-.cards .card section {
+.card section {
     padding: 20px;
     transition: 0.5s;
     height: 100%;
@@ -332,30 +364,51 @@ body.changeColor {
     flex-direction: column;
 }
 
-.cards .card section h1 {
+.card section h1 {
     font-family: "MANIFESTO", serif;
     font-size: 100px;
     color: var(--white);
 
-    transition:0.5s;
-    transform: translateX(45%);
+    text-align: right;
+    width: 100%;
+
     opacity: 0.5;
+
+    transition: 1s ease;
 }
 
-.cards .card:hover section h1 {
-    transform: translateX(0);
+.card:hover section h1 {
+    width: 0%;
     opacity:1;
 }
 
-
-.cards .card section p {
+.card section p {
     font-family: "Gill Sans Nova Light", sans-serif;
     font-weight: 300;
+    font-size: 25px;
     color: var(--white);
     width: 100%;
     overflow-wrap: break-word;
 }
 
+.card.cheats:hover {
+    background: linear-gradient(left, var(--pink), var(--teal), var(--lightgreen));
+    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+    border-top: 2px solid rgba(255,255,255,0.2);
+    border-left: 2px solid rgba(255,255,255,0.2);
+    backdrop-filter: blur(5px);
+}
 
+#footer {
+    height: 30vh;
+    border: 5px solid red;
+
+    background-color: var(--black);
+    filter: brightness(0.7);
+}
+
+#footer div {
+    color: var(--white);
+}
 
 
